tests/format/misc/errors/js/invalid-escape-in-identifier.js
const \u{20} = 1
const \u{3000} = 1
